# osnekl

./: README.md  dune-project  osnekl.opam
lib/: apple.ml  apple.mli  direction.ml  direction.mli  dune  game.ml  game.mli  game_state.ml  game_state.mli  osnekl.ml  position.mli  snake.ml  snake.mli
test/: dune
test/phase1/: apple_tests.ml  dune  game_tests.ml  snake_tests.ml
test/phase2/: direction_tests.ml  dune  game_tests.ml  snake_tests.ml
test/phase3/: dune  game_tests.ml  snake_tests.ml
