(lang dune 3.6)

(name osnekl)

(generate_opam_files true)

(source
 (github sam4815/osnekl))

(authors "sam4815")

(maintainers "sam4815")

(license LICENSE)

(documentation https://github.com/sam4815/osnekl)

(package
 (name osnekl)
 (synopsis "Snake for the terminal")
 (depends ocaml dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
